Adding headers and auto-javadoc to core extensions